# mstd

./: .clang-format  .clang-tidy  .clang-uml  .clangd  .cppcheck.suppress  .devops.toml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  compile_commands.json
.git_template/hooks/: prepare-commit-msg
.github/workflows/: build.yml  changelog.yml  check-pr-for-release-version.yml  create-tag.yml  docs.yml  static-analysis.yml
checks/: .gitignore  pyproject.toml
checks/src/checks/: config.py  cpp_rules.py  enums.py  ruff.toml  rules.py
checks/src/checks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
checks/src/checks/cpp/: style_rules.py
checks/src/checks/enums/: base.py
checks/src/checks/files/: __init__.py  files.py  update_changelog.py
checks/src/checks/logger/: __init__.py  logger.py
checks/src/checks/results/: __init__.py
checks/src/checks/rules/: __init__.py  result_type.py  rules.py
checks/src/checks/scripts/: __init__.py  cpp_checks.py  update_changelog.py
checks/src/checks/utils/: __init__.py  rich.py  utils.py
checks/tests/: __init__.py
checks/tests/cpp/: __init__.py  test_style_rules.py
checks/tests/files/: __init__.py  test_files.py  test_update_changelog.py
checks/tests/rules/: test_rules.py
checks/tests/scripts/: __init__.py  test_cpp_checks.py
checks/tests/utils/: __init__.py  test_utils.py
devops/: pyproject.toml
devops/src/devops/: __init__.py  github.py  ruff.toml
devops/src/devops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
devops/src/devops/cpp/: __init__.py  style_rules.py
devops/src/devops/enums/: __init__.py
devops/src/devops/files/: config.py  files.py  update_changelog.py
devops/src/devops/logger/: logger.py
devops/src/devops/rules/: rules.py
devops/src/devops/scripts/: cpp_checks.py  update_changelog.py
devops/src/devops/utils/: __init__.py  utils.py
devops/tests/cpp/: test_style_rules.py
devops/tests/files/: test_files.py  test_update_changelog.py
devops/tests/rules/: test_rules.py
devops/tests/scripts/: test_cpp_checks.py
devops/tests/utils/: test_utils.py
docs/: Doxyfile
include/mstd/: compile.hpp  enum.hpp  error.hpp  functional.hpp  math.hpp  pack.hpp  physics.hpp  quantity.hpp  ratio.hpp  string.hpp  type_traits.hpp  units.hpp  vector.hpp
include/mstd/error/: compile_time_errors.hpp  exceptions.hpp
include/mstd/linAlg/: vector3d.hpp  vector3d.tpp  vector3d.tpp.hpp  vector3dClass.hpp  vector3dClass.tpp  vector3dClass.tpp.hpp
include/mstd/linAlg/concepts/: vector3dConcepts.hpp  vector3dDepth.hpp
include/mstd/math/: power.hpp  ratio.hpp  rational.hpp
include/mstd/pack/: integer_pack.hpp  integer_pack_details.hpp  integer_pack_operations.hpp  pack.hpp  ratio_pack.hpp  ratio_pack_details.hpp  ratio_pack_operations.hpp  rational_pack.hpp  rational_pack_details.hpp  rational_pack_operations.hpp
include/mstd/physics/: potentials.hpp
include/mstd/physics/potentials/: lie_potential.hpp  lie_potential_impl.hpp
include/mstd/quantity/: dim.hpp  dim_details.hpp  dim_impl.hpp  dim_operations.hpp  dim_ratio.hpp  dim_ratio_details.hpp  dim_ratio_impl.hpp  dim_ratio_operations.hpp  dimension.hpp  dimension_impl.hpp  enums.hpp  quantity.hpp  quantity_impl.hpp  unit.hpp  unit_common.hpp  unit_details.hpp  unit_impl.hpp  unit_operations.hpp
include/mstd/ratio/: power_ratio.hpp  ratio.hpp
include/mstd/string/: join.hpp
include/mstd/tags/: quantity_tag.hpp  unit_tag.hpp
include/mstd/type_traits/: enum_traits.hpp  math_traits.hpp  pack_traits.hpp  quantity_traits.hpp  ranges_traits.hpp  ratio_traits.hpp  type_traits.hpp  unit.hpp  unit_traits.hpp
include/mstd/type_traits/math/: arithmetic_traits.hpp  type_operations.hpp  type_traits.hpp
include/mstd/units/: base.hpp  dimension.hpp  dimension_aliases.hpp  quantity.hpp  ratio.hpp  scale.hpp  scale_tags.hpp  traits.hpp  unit_strings.hpp  velocity.hpp
include/mstd/units/string/: base_string.hpp  prefix.hpp  special_cases.hpp  unit_strings.hpp
include/mstd/vector/: svec.hpp
scripts/: addLicense.sh  cppcheck.sh  init_repo.sh
scripts/mstd_cpp_checks/: .gitignore  cpp_checks.py  cpp_rules.py  cpp_types.py  enums.hpp  enums.py  files.py  ruff.toml  rules.py
test/: CMakeLists.txt
test/linAlg/: CMakeLists.txt  vector3d.cpp
test/math/: CMakeLists.txt  test_cpow.cpp
test/physics/: CMakeLists.txt  test_lie_potential.cpp
test/quantity/: CMakeLists.txt  compile_dummy.cpp  test_dimension.cpp  test_mp-units.cpp  test_quantity.cpp  test_traits.cpp  test_utils.hpp
test/ratio/: test_power_ratio.cpp
test/units/: test_units.cpp
