[project]
name = "checks"
version = "0.1.0"
description = "This package handles commit and CI checks for mstd"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest>=9.0.1", "ruff>=0.14.6", "typer>=0.20.0"]

[project.scripts]
cpp_checks = "checks.scripts.cpp_checks:main"
update_changelog = "checks.scripts.update_changelog:app"
